[gd_scene load_steps=3 format=3 uid="uid://dkjq3p2rbxe4f"]

[ext_resource type="Script" uid="uid://cxsi8mnhwdjs7" path="res://Code/Helpers/PreformanceMonitor.gd" id="1_6lqcb"]
[ext_resource type="Script" uid="uid://bfi1c6m4xnsno" path="res://Code/UserInterface/PreformanceGraph.gd" id="2_txqxp"]

[node name="PerformanceMonitor" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 160.0
grow_horizontal = 0
script = ExtResource("1_6lqcb")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="FPSDisplay" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.839216, 0.839216, 1)
theme_override_font_sizes/font_size = 16
text = "60 FPS"

[node name="MemoryDisplay" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.839216, 0.839216, 1)
theme_override_font_sizes/font_size = 14
text = "100 MB"

[node name="FPSGraph" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_txqxp")

[node name="QualityDisplay" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.839216, 0.839216, 1)
theme_override_font_sizes/font_size = 14
text = "Quality: Medium"

[node name="EntitiesDisplay" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.839216, 0.839216, 1)
theme_override_font_sizes/font_size = 14
text = "Entities: 0"

[node name="LightsDisplay" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.839216, 0.839216, 0.839216, 1)
theme_override_font_sizes/font_size = 14
text = "Lights: 0"